internal/render/testdata/tautulli/k8s/play/tautulli/base/httproute.yaml
# Generated by deploybot. Do not edit.
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: tautulli
  labels:
    app.kubernetes.io/managed-by: deploybot
    app.kubernetes.io/name: tautulli
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: envoy-gateway-system
      sectionName: https
  hostnames:
    - tautulli.k8s.kcloud.zone
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: tautulli
          port: 8181
