internal/render/testdata/tautulli/k8s/play/tautulli/base/service.yaml
# Generated by deploybot. Do not edit.
apiVersion: v1
kind: Service
metadata:
  name: tautulli
  labels:
    app.kubernetes.io/managed-by: deploybot
    app.kubernetes.io/name: tautulli
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8181
