internal/render/testdata/tautulli/k8s/play/tautulli/base/statefulset.yaml
# Generated by deploybot. Do not edit.
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: tautulli
  labels:
    app.kubernetes.io/managed-by: deploybot
    app.kubernetes.io/name: tautulli
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: tautulli
  template:
    metadata:
      labels:
        app.kubernetes.io/managed-by: deploybot
        app.kubernetes.io/name: tautulli
    spec:
      containers:
        - name: tautulli
          image: docker.io/linuxserver/tautulli:v2.15.2-ls194
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8181
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 2000m
              memory: 2Gi
